<resources>
    <string name="app_name">Chat App</string>
    <string name="send_btn">Send</string>
    <string name="message_text">message text</string>
    <string name="user_name">User name</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_chat_fragment">Hello chat fragment</string>
    <string name="hello_user_fragment">Hello user fragment</string>
    <string name="chats">CHATS</string>
    <string name="users">USERS</string>
    <string name="username">UserName</string>
    <string name="send">send</string>
    <string name="type_a_message">Type a message ...</string>
    <string name="hello">hello</string>
</resources>